<resources>
    <string name="app_name">iMovie</string>
    <string name="splash_message">for Perú Apps</string>

    <string name="auth_welcome">Welcome,</string>
    <string name="auth_sign_in">sign in to continue</string>
    <string name="auth_hint_email">Email</string>
    <string name="auth_hint_password">Password</string>
    <string name="auth_get_started">Get started</string>
    <string name="auth_loading">Loading…</string>
    <string name="auth_email_error_message">Enter a valid email</string>
    <string name="auth_password_error_message">Enter a password</string>

    <string name="ok">Ok</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="logout_title">Sign off</string>
    <string name="logout_message">Are you sure you want to log out?</string>

    <string name="movie_transition">movieTransition</string>
    <string name="list_movie_buy_ticket">Buy ticket</string>
    <string name="detail_movie_info">2019 – 2h 32m</string>
    <string name="chip_action">Action</string>
    <string name="chip_drama">Drama</string>
    <string name="chip_history">History</string>
    <string name="movie_rating">4.0</string>
    <string name="detail_plot_summary">Plot summary</string>
    <string name="place_name1">James\nMangold</string>
    <string name="place_rol1">Director</string>
    <string name="place_name2">Matt\nDamon</string>
    <string name="place_rol2">Carrol</string>
    <string name="place_name3">Christian\nBale</string>
    <string name="place_rol3">Ken Milles</string>
    <string name="place_name4">Caitriona\nBalfe</string>
    <string name="place_rol4">Mollie</string>
    <string name="detail_title_cast"><![CDATA[Cast & Crew]]></string>
    <string name="dialog_default_cancel">Cancel</string>
</resources>