<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.auth.AuthActivity">

    <data class="ActivityAuthBinding">

        <variable
            name="viewModel"
            type="peruapps.movies.presentation.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <LinearLayout
            android:id="@+id/contentView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/guidelineTop">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/size50"
                android:layout_height="@dimen/size50"
                app:srcCompat="@drawable/ic_glasses" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp4"
                android:text="@string/auth_welcome"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp24"
                app:fontFamily="@font/quicksand_bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_sign_in"
                android:textSize="@dimen/sp24"
                app:fontFamily="@font/quicksand_bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp24"
                android:hint="@string/auth_hint_email"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextErrorStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_regular"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.user.email}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:hint="@string/auth_hint_password"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextErrorStyle"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_regular"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="@={viewModel.user.password}" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/getStartedButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size58"
            android:layout_marginTop="@dimen/dp20"
            android:fontFamily="@font/quicksand_medium"
            android:onClick="@{()-> viewModel.auth()}"
            android:paddingTop="@dimen/dp12"
            android:paddingBottom="@dimen/dp12"
            android:text="@string/auth_get_started"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/dp8"
            app:icon="@drawable/ic_arrow"
            app:iconGravity="end"
            app:iconSize="@dimen/size20"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/contentView" />

        <LinearLayout
            android:id="@+id/loadingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:clickable="true"
            android:elevation="@dimen/dp4"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp16"
                android:text="@string/auth_loading"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp16"
                app:fontFamily="@font/quicksand_semibold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>